[package]
name = "keypad-go-updater"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
serialport = "4.2.2"
stm32-uart-boot = {git = "https://github.com/cbiffle/stm32-uart-boot/"}
zip = "0.6.6"
